# crustacea

./: .gitignore  LICENCE  README.md  pyproject.toml  setup.py
crispy_crustacea/: main.py
crispy_crustacea/utils/: logging.py
crustacea/: __main__.py  main.py
crustacea/db/: crust.db
crustacea/src/: editor.py  filemenu.py  header.py  language_map.py  menu.py  results_sparkline.py  results_storage.py  results_visualization.py  statistics.py  text_area.py
crustacea/texts/: Beginner_Lesson_01___a,s,d,f,j,k,l,e,i.md  Beginner_Lesson_02___a,s,d,f,g,h,j,k,l,e,i.md  Beginner_Lesson_03___a,s,d,f,g,h,j,k,l,e,i,w,o.md  Beginner_Lesson_04___a,s,d,f,g,h,j,k,l,e,i,w,o,q,p.md  Beginner_Lesson_05___a,s,d,f,g,h,j,k,l,e,i,w,o,q,p,r,u.md  Beginner_Lesson_06___a,s,d,f,g,h,j,k,l,e,i,w,o,q,p,r,u,t,y.md  Beginner_Lesson_07___a,s,d,f,g,h,j,k,l,e,i,w,o,q,p,r,u,t,y,v,n,.md  Beginner_Lesson_08___a,s,d,f,g,h,j,k,l,e,i,w,o,q,p,r,u,t,y,v,n,c,m.md  Beginner_Lesson_09___a,s,d,f,g,h,j,k,l,e,i,w,o,q,p,r,u,t,y,v,n,c,m,b,z,x.md  Beginner_Lesson_10___capitals_punctuation.md  DynamicMaskingPage.js  code_example.js  code_example.py  example_text_part1.md  example_text_part1.rt  example_text_part2.md  example_text_part2.rt  pluginRouter.js  pollJobStatus.js
crustacea/utils/: logging.py
tutorials/: calculator.py  stopwatch.py
tutorials/styles/: calculator.tcss  stopwatch.tcss
